fixed broken css link and added hover state to navigation menu.

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -58,4 +58,7 @@ color: white;
 #header h1{
 	color: white;
 }
+#navigation a:hover{
+	text-decoration: underline;
+}
 
